⚔ “Knights and Flowers” 1.0.2 🌼

✦Fixes:
✢ Stalliongrad palace construction fixed
✢ Flavour Decisions to Brodfeld
✢ Cosmetic tag for Arcturian Order when it becomes a kingdom
✢ Griffon Liberation Army and Brodfeld can't puppet each other
✢ Formable Socialist Union and Socialist Republic of Equestria
✢ Fixes to Griffon Liberation Army AI
✢ Fixed some CTDs
✢ Fixed Dread League supply consumption

⚔ “Knights and Flowers” 1.0.1 🌼

✦Fixes:
✢ Infantry Equipment upgrades were brought back
✢ Sombra has 70 days to finish the civil war, before Equestria declares war on him
✢ Fixes to Olenia-Thorax relationships
✢ Fixes to Thorax focus tree and events
✢ Fixes to Solar Empire triggers
✢ Balancing to Solar Empire, Griffonian Republic and Lunar Empire
✢ More focus icons
✢ Fixed localisation
✢ Topbar background is fixed
✢ Duplicates removed
✢ Flavour Decisions in Griffon Liberation Army
✢ Some memes removed
✢ Other bugfixes and improvements

⚔ “Knights and Flowers” 1.0 🌼
Changelog:
Features:
✦﻿The Griffon Continent is here!

❈ Countries with focus trees:
✢ Griffon Empire
✢ Wingbardy
✢ Aquilea
✢ Skyfall Trade Federation
✢ Griffon Republic
✢ Griffon Liberation Army
✢ Blackrock Bandits
✢ Dread League
✢ Rumare
✢ Greifwald
✢ Brodfeld
✢ Holy Order
✢ Nyumba ya Kaskazini

Various choices, not enough griffon portraits and more land to conquer

✦Equestria sweet home

❈ Countries with focus trees:
✢ Solar Empire
✢ Celestial State
✢ Democratic path for Equestria
✢ Harmonic Thorax's Changeling path
✢ Rearranged Changeling focuses
✢ Lunar Empire focus tree improved
✢ Penguins
✢ Yakyakistan reworked
✢ Buffalo Chiefdom

❈ Changes to Equestrian continent:
✢ Numerous changes to coastline to make it fatter and more realistic
✢ Adjustments to Equestrian weather, now there are no temperature jumps
✢ More provinces in Equestria
✢ Our Town is now smaller
✢ More towns and villages on the map
✢ Adjustments to the river that flows near Whinnyapolis and Bales, more realistic trail
✢ Adjustments to jungles
