@@ -25,15 +25,15 @@ conquer_BAN = {
 		}
 	}
 	abort = {
-		NOT = {
-			country_exists = BAN
+		BAN = {
+			exists = no
 		}
 	}
 	
 	ai_strategy = {
 		type = conquer
 		id = "BAN"
-		value = 200
+		value = 500
 	}
 }
 conquer_BOI = {
