@@ -106,6 +106,10 @@ YAK_CHN = {
 	color = rgb { 59 110 125 }
 	color_ui = rgb { 59 110 125 }
 }
+YAK_empire = {
+	color = rgb { 124 198 240 }
+	color_ui = rgb { 124 198 240 }
+}
 JAK_CHN = {
 	color = rgb { 64 68 95 }
 	color_ui = rgb { 64 68 95 }
