@@ -165,6 +165,62 @@ foreign_support = {
 		}
 	}
 }
+form_yak_empire_category = {
+	YAK_formation_of_the_empire = {
+		available = {
+			custom_trigger_tooltip = {
+				tooltip = owns_all_cores_tt
+				hidden_trigger = {
+					NOT = {
+						AND = {
+							any_state = {
+								is_core_of = ROOT
+								NOT = { is_owned_by = ROOT }
+							}
+						}
+					}
+				}
+			}
+			
+			277 = { is_owned_by = ROOT }
+			278 = { is_owned_by = ROOT }
+			281 = { is_owned_by = ROOT }
+			271 = { is_owned_by = ROOT }
+			335 = { is_owned_by = ROOT }
+			336 = { is_owned_by = ROOT }
+			337 = { is_owned_by = ROOT }
+			custom_trigger_tooltip = {
+				tooltip = not_has_agrarian_society
+				hidden_trigger = {
+					NOT = {
+						has_agrarian_society = yes
+					}
+				}
+			}
+		}
+		cost = 50
+		ai_will_do = {
+			factor = 100
+		}
+		fire_only_once = yes
+		is_good = no
+		
+		visible = {
+			OR = {
+				original_tag = YAK
+				original_tag = JAK
+			}
+			OR = {
+				has_government = fascism
+				has_government = neutrality
+			}
+		}
+		complete_effect = {
+			drop_cosmetic_tag = yes
+			set_cosmetic_tag = YAK_empire
+		}
+	}
+}
 war_measures = {
 	YAK_civil_war_troops = {
 		icon = decision_generic_construction
@@ -184,7 +240,10 @@ war_measures = {
 		}
 		complete_effect = {
 			add_manpower = -18000
-			load_oob = "YAK_Civil_War"
+			custom_effect_tooltip = yak_civil_war_regiments_formation
+			hidden_effect = {
+				load_oob = "YAK_Civil_War"
+			}
 		}
 		days_remove = 30
 	}
