@@ -59,6 +59,17 @@ form_griffon_empire_category = {
 	}
 }
 
+form_yak_empire_category = {
+	icon = yak_empire
+	picture = GFX_decision_yak_empire_cat_picture
+	allowed = {
+		OR = {
+			original_tag = YAK
+			original_tag = JAK
+		}
+	}
+}
+
 form_aquileia_category = {
 	icon = generic_formable_nations
 	
