@@ -1,0 +1,41 @@
+# Allows you to create your own dynamic keys
+# to be called in localization.
+# defined_text -> this is it, we're defining the text
+# text -> a discrete entry that can be picked to display in loc.
+# trigger -> determines if a text entry will be picked or not.
+# (The triggers need to be valid for the scope the key is called in
+# (eg Root or From.From).)
+# localization_key -> points to the localization key
+# that'll be used if trigger passes
+
+defined_text = { # Construction of the Palace of the Soviets
+	name = YakEmpireName
+	text = {
+		trigger = {
+			has_government = fascism
+		}
+		localization_key = Yak_Khanate_formable
+	}
+	text = {
+		trigger = {
+			has_government = neutrality
+		}
+		localization_key = Yak_Empire_formable
+	}
+}
+defined_text = { # Construction of the Palace of the Soviets
+	name = EmpireOrKhanate
+	
+	text = {
+		trigger = {
+			has_government = neutrality
+		}
+		localization_key = Yak_Empire_formable_no_yak
+	}
+	text = {
+		trigger = {
+			has_government = fascism
+		}
+		localization_key = Yak_Khanate_formable_no_yak
+	}
+}
