@@ -12,6 +12,10 @@ spriteTypes = {
 		texturefile = "gfx/interface/decisions/STG_palace_construction_effort.dds"
 	}
 	SpriteType = {
+		name = "GFX_decision_yak_empire_cat_picture"
+		texturefile = "gfx/interface/decisions/yak_empire_cat_picture.dds"
+	}
+	SpriteType = {
 		name = "GFX_decision_crystals"
 		texturefile = "gfx/interface/decisions/crystals.dds"
 	}
@@ -161,5 +165,9 @@ spriteTypes = {
 	SpriteType = {
 		name = "GFX_decision_equestrian_union"
 		texturefile = "gfx/interface/decisions/equestrian_union.dds"
+	}
+	SpriteType = {
+		name = "GFX_decision_category_yak_empire"
+		texturefile = "gfx/interface/decisions/decision_category_yak_empire.dds"
 	}
 }
