@@ -119,6 +119,15 @@ YAK_communism_ADJ:0 "Yakyakistani"
 YAK_CHN_fascism:0 "Yak Zone"
 YAK_CHN_fascism_DEF:0 "The Changeling Yak Zone"
 YAK_CHN_fascism_ADJ:0 "Former Yakistani"
+YAK_CHN_fascism:0 "Yak Zone"
+YAK_CHN_fascism_DEF:0 "The Changeling Yak Zone"
+YAK_CHN_fascism_ADJ:0 "Former Yakistani"
+YAK_empire_neutrality:0 "Yak Empire"
+YAK_empire_neutrality_DEF:0 "The Yak Empire"
+YAK_empire_neutrality_ADJ:0 "Yak"
+YAK_empire_fascism:0 "Yak Khanate"
+YAK_empire_fascism_DEF:0 "The Yak Khanate"
+YAK_empire_fascism_ADJ:0 "Yak"
 
 CHN_neutrality:0 "Changeling Hives"
 CHN_fascism:0 "Changeling Lands"
