@@ -265,3 +265,14 @@ YAK_alastair:0 "Ailey Stair"
 ### Early Robotics - Early prototypes of our "Robo-yaks" will be used to assure quality at a faster rate and catching mistakes that ordinary Yaks would.###
 ### Survival ###
 ### ###
+
+yak_civil_war_regiments_formation:0 "Civil War Militia will be formed.\n"
+
+form_yak_empire_category:0 "The [Root.YakEmpireName]"
+form_yak_empire_category_desc:0 "Long ago, the Yaks owned lands to the east. After the griffon colonists arrived, they were driven out deeper into the Yakistan valley. No proud Yak can call his country [Root.EmpireOrKhanate] if it doesn't have all of the ancestor territories."
+YAK_formation_of_the_empire:0 "Form the [Root.YakEmpireName]"
+
+Yak_Khanate_formable:0 "Yak Khanate"
+Yak_Empire_formable:0 "Yak Empire"
+Yak_Empire_formable_no_yak:0 "an Empire"
+Yak_Khanate_formable_no_yak:0 "a Khanate"
