@@ -194,3 +194,4 @@ IS_IN_GRIFFONIA_TT:0 "Is in Griffonia"
 common_threat:0 "Common Threat"
 equestrian_embassy:0 "Equestrian Embassy"
 STG_EQS_accepted_core_transfer:0 "Equestria accepted to transfer the southern states"
+owns_all_cores_tt:0 "Owns all cores.\n"
