@@ -7,8 +7,12 @@
 ✢ Griffon Liberation Army and Brodfeld can't puppet each other
 ✢ Formable Socialist Union and Socialist Republic of Equestria
 ✢ Fixes to Griffon Liberation Army AI
+✢ Yak Empire formable nation
 ✢ Fixed some CTDs
 ✢ Fixed Dread League supply consumption
+✢ Fixed localisation
+✢ Fixed russian localisation
+
 
 ⚔ “Knights and Flowers” 1.0.1 🌼
 
